# beast-http-ws-server

./: CMakeLists.txt  build.sh  run.sh  server.cpp
web/: index.html
